<resources>
    <string name="app_name">SultanAgency</string>
    <string name="iv_main_description">Главная картинка квартиры</string>
    <string name="tv_main_item_adress">%s, %s-%s</string>
    <string name="tv_main_item_price">%s тыс. руб.</string>
    <string name="tv_main_item_room_num">комнат: %d</string>
    <string name="tv_main_item_toilet_type">с/узел: %s</string>
    <string name="tv_main_item_floor_num">этаж: %d</string>
    <string name="tv_main_item_windows_type">окна: %s</string>
    <string name="tv_main_item_ceiling">потолки: %sм</string>
    <string name="tv_main_item_rooms_type">комнаты: %s</string>
    <string name="balcony">балкон</string>
    <string name="loggia">лоджия</string>
    <string name="tv_main_item_square_all">Sобщ. %s м2</string>
    <string name="tv_main_item_square_kitchen">Sкухня %s м2</string>
    <string name="search">поиск</string>
    <string name="add">новое об.</string>
    <string name="main">главная</string>
    <string name="favourite">избранное</string>
    <string name="profile">профиль</string>
    <string name="fab_description">Главная страница</string>
    <string name="tv_post_street">Улица:</string>
    <string name="tv_post_price">Цена, тыс. руб.</string>
    <string name="tv_post_house">д.:</string>
    <string name="tv_post_flat">кв.:</string>
    <string name="tv_post_room_num">Количество комнат:</string>
    <string name="tv_post_toilet">Сан. узел:</string>
    <string name="tv_post_floor">Этаж:</string>
    <string name="tv_post_windows">Окна:</string>
    <string name="tv_post_ceiling">Высота потолков, м:</string>
    <string name="tv_post_rooms_type">Вид комнат:</string>
    <string name="tv_post_square_kitchen">S кухни, м2:</string>
    <string name="tv_post_square_all">S общая, м2:</string>
    <string name="cb_post_windows_type_to_street">на улицу</string>
    <string name="cb_post_windows_type_to_yard">во двор</string>
    <string name="tv_post_balcony">Выступ:</string>
    <string name="cb_post_balcony">балкон</string>
    <string name="cb_post_loggia">лоджия</string>
    <string name="cb_post_toilet_together">совмещенный</string>
    <string name="cb_post_toilet_separate">раздельный</string>
    <string name="cb_post_rooms_together">смежные</string>
    <string name="cb_post_rooms_separate">раздельные</string>
    <string name="tv_post_phone">Телефон:</string>
    <string name="tv_post_name">Имя:</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save">save</string>
    <string name="settings">settings</string>
    <string name="edit">edit</string>
</resources>