<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/small_margin"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?attr/colorPrimaryContainer">
    <ImageView
        android:contentDescription="@string/iv_main_description"
        android:id="@+id/iv_post_picture"
        android:layout_width="0dp"
        android:layout_height="250dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/flat"
        android:scaleType="centerCrop"/>

    <TableLayout
        android:id="@+id/tl_post_adress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*"
        app:layout_constraintTop_toBottomOf="@id/iv_post_picture">
        <TableRow>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tv_post_street"
                    style="@style/StandartCaption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/small_margin"
                    android:text="@string/tv_post_street"/>
                <EditText
                    android:id="@+id/et_post_street"
                    style="@style/StandartText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/small_margin"
                    tools:text="Калинина"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tv_post_price"
                    style="@style/StandartCaption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/small_margin"
                    android:text="@string/tv_post_price"/>
                <EditText
                    android:id="@+id/et_post_price"
                    style="@style/StandartValuableText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/small_margin"
                    tools:text="1250"/>
            </LinearLayout>
        </TableRow>
        <TableRow>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tv_post_house"
                    style="@style/StandartCaption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/small_margin"
                    android:text="@string/tv_post_house"/>
                <EditText
                    android:id="@+id/et_post_house"
                    style="@style/StandartText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/small_margin"
                    tools:text="54"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tv_post_flat"
                    style="@style/StandartCaption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/small_margin"
                    android:text="@string/tv_post_flat"/>
                <EditText
                    android:id="@+id/et_post_flat"
                    style="@style/StandartText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/small_margin"
                    tools:text="36"/>
            </LinearLayout>
        </TableRow>
    </TableLayout>

    <FrameLayout
        android:id="@+id/fl_post_adress"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/gray"
        app:layout_constraintTop_toBottomOf="@id/tl_post_adress"/>

    <TableLayout
        android:id="@+id/tl_post_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*"
        android:layout_marginTop="@dimen/big_margin"
        app:layout_constraintTop_toBottomOf="@id/fl_post_adress">
        <TableRow>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tv_post_room_num"
                    style="@style/StandartCaption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_post_room_num"/>
                <EditText
                    android:id="@+id/et_post_room_num"
                    style="@style/StandartText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="3"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_vertical">
                <TextView
                    android:id="@+id/tv_post_toilet"
                    style="@style/StandartCaption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_post_toilet"/>
                <Spinner
                    android:id="@+id/s_post_toilet"
                    style="@style/StandartText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </TableRow>
        <TableRow>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_vertical">
                <TextView
                    android:id="@+id/tv_post_floor"
                    style="@style/StandartCaption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_post_floor"/>
                <EditText
                    android:id="@+id/et_post_floor"
                    style="@style/StandartText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="3"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_vertical">
                <TextView
                    android:id="@+id/tv_post_windows"
                    style="@style/StandartCaption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_post_windows"/>
                <Spinner
                    android:id="@+id/s_post_windows"
                    style="@style/StandartText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </TableRow>
        <TableRow>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_vertical">
                <TextView
                    android:id="@+id/tv_post_ceiling"
                    style="@style/StandartCaption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_post_ceiling"/>
                <EditText
                    android:id="@+id/et_post_ceiling"
                    style="@style/StandartText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="2,8"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_vertical">
                <TextView
                    android:id="@+id/tv_post_rooms_type"
                    style="@style/StandartCaption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_post_rooms_type"/>
                <Spinner
                    android:id="@+id/s_post_rooms_type"
                    style="@style/StandartText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </TableRow>
    </TableLayout>

    <FrameLayout
        android:id="@+id/fl_post_info"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/gray"
        app:layout_constraintTop_toBottomOf="@id/tl_post_info"/>

    <LinearLayout
        android:id="@+id/ll_post_square"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/small_padding"
        app:layout_constraintTop_toTopOf="@id/ll_post_balcony"
        app:layout_constraintBottom_toBottomOf="@id/ll_post_balcony"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/ll_post_balcony"
        android:background="@drawable/frame_square">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_post_square_all"
                style="@style/StandartText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_post_square_all"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_post_square_kitchen"
                style="@style/StandartText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_post_square_kitchen"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_post_balcony"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/small_padding"
        android:layout_marginTop="@dimen/big_margin"
        app:layout_constraintTop_toBottomOf="@id/fl_post_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/ll_post_square"
        android:background="@drawable/frame_balcony">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <CheckBox
                android:id="@+id/cb_post_balcony"
                android:layout_width="25dp"
                android:layout_height="25dp"/>
            <TextView
                style="@style/StandartText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/balcony"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <CheckBox
                android:id="@+id/cb_post_loggia"
                android:layout_width="25dp"
                android:layout_height="25dp"/>
            <TextView
                style="@style/StandartText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loggia"/>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>